The event package for pub/sub, originally the dsol-event package, has been added to DJUTILS and  will be removed from the next version of DSOL. Many open issues in the DSOL event package has been fixed in the port to DJUTILS. Examples are adding equals and hashCode methods for the TimedEvent, better writeObject and readObject methods for the EventListenerMap, repair of the failure to sometimes remove an EventListener from the EventProducer, etc. Almost full unit test coverage has been added to the djunits event package. The event producing collections in the event.util package now only fire events when additions or  removals actually took place, not just when the add / remove / put methods are called. The EventProducingCollection, EventProducingList, EventProducingMap and EventProducingSet in the  event.util package also fire events when content in the collections has changed. In that case, a CHANGE_EVENT is fired. The events of the event producing collections in the event.util package now have events that carry a payload. The payload is the new number of entries in the collection for the ADD_EVENT and REMOVE_EVENT. It is equal to the changed index for the CHANGE_EVENT of the List, and null for the CHANGE_EVENT of the other collection types that are not indexed. Since the boolean for strong versus weak references in the EventProducer was always unclear (does true mean strong or weak?), it has been replaced by an enum. Several of the underlying data structures of the djutils package have been changed from a HashMap to a LinkedHashMap and from a HashSet to a LinkedHashSet to guarantee reproducibility of results. As an exception the ImmutableHashSet and ImmutableHashMap are still backed by unlinked variants, as they explicitly are not reproducible. DJUNITS updated to 4.01.03.